# cli-dependency-graph

./: LICENSE  README.md  STRUCTURE.txt  example_click_app.py  pyproject.toml
src/cli_dependency_graph/: __init__.py  __main__.py  analyzer.py  cli.py  renderer.py
tests/unit/: test_analyzer.py
