[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-dependency-graph"
version = "0.1.0"
description = "CLI tool to statically analyze and visualize Click/Typer command trees."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "graphviz>=0.20.0"
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
cli-dependency-graph = "cli_dependency_graph.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
